--- a/project/MSVS_2019/pyPostProcessor.vcxproj.filters
+++ b/project/MSVS_2019/pyPostProcessor.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="..\..\source\CollectionOfClasses.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\source\Sensitivities.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\Sensitivities_Database.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\source\PostProcessor.h">
@@ -45,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\source\Utilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\Sensitivities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\Sensitivities_Database.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
