--- a/project/MSVS_2019/pyPostProcessor.vcxproj
+++ b/project/MSVS_2019/pyPostProcessor.vcxproj
@@ -18,33 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-<<<<<<< HEAD
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{9AE10A00-7309-4AA3-AF84-9607D6DC896A}</ProjectGuid>
-=======
-  <ItemGroup>
-    <ClCompile Include="..\..\source\CollectionOfClasses.cpp" />
-    <ClCompile Include="..\..\source\main.cpp" />
-    <ClCompile Include="..\..\source\PostProcessor.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\source\PostProcessor.h" />
-    <ClInclude Include="..\..\source\ProfilesDatabase.h" />
-    <ClInclude Include="..\..\source\ProfilesDatabase.hpp" />
-    <ClInclude Include="..\..\source\ROPA.h" />
-    <ClInclude Include="..\..\source\ROPA.hpp" />
-    <ClInclude Include="..\..\source\Sensitivities.h" />
-    <ClInclude Include="..\..\source\Sensitivities.hpp" />
-    <ClInclude Include="..\..\source\Sensitivities_Database.h" />
-    <ClInclude Include="..\..\source\Sensitivities_Database.hpp" />
-    <ClInclude Include="..\..\source\Utilities.h" />
-    <ClInclude Include="..\..\source\Utilities.hpp" />
-  </ItemGroup>
-  <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{2771527D-5BD4-4928-8FBA-2C594BCCB5E0}</ProjectGuid>
->>>>>>> main
+    <ProjectGuid>{E88B093C-F4C6-417A-B49F-FDFF77E354AC}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -93,14 +69,7 @@
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-<<<<<<< HEAD
-    <IncludePath>C:\Users\timot\Desktop\Numerical_libraries\eigen-3.4.0;C:\Users\timot\Desktop\GitHub\OpenSMOKEpp\source;C:\NumericalLibraries\boost_1_78_0\;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-=======
-    <IncludePath>C:\Users\timot\Desktop\Numerical_libraries\eigen-3.4.0;C:\Users\timot\Desktop\GitHub\OpenSMOKEpp\source;C:\NumericalLibraries\boost_1_78_0\;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\timot\Desktop\Numerical_libraries\eigen-3.4.0;C:\Users\timot\Desktop\GitHub\OpenSMOKEpp\source;C:\NumericalLibraries\boost_1_78_0\;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
->>>>>>> main
+    <IncludePath>C:\NumericalLibraries\boost_1_78_0;C:\Users\timot\Desktop\GitHub\OpenSMOKEpp\source;C:\Users\timot\Desktop\Numerical_libraries\eigen-3.4.0;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -132,59 +101,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-<<<<<<< HEAD
-    <Link>
-      <AdditionalLibraryDirectories>C:\NumericalLibraries\boost_1_78_0\lib64-msvc-14.2</AdditionalLibraryDirectories>
-    </Link>
     <ClCompile>
       <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>C:\NumericalLibraries\boost_1_78_0\lib64-msvc-14.2;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\CollectionOfClasses.cpp" />
     <ClCompile Include="..\..\source\main.cpp" />
     <ClCompile Include="..\..\source\PostProcessor.cpp" />
-    <ClCompile Include="..\..\source\ProfilesDatabase.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\source\ROPA.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\source\Sensitivities.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\source\Sensitivities_Database.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\source\Utilities.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\source\PostProcessor.h" />
     <ClInclude Include="..\..\source\ProfilesDatabase.h" />
+    <ClInclude Include="..\..\source\ProfilesDatabase.hpp" />
     <ClInclude Include="..\..\source\ROPA.h" />
+    <ClInclude Include="..\..\source\ROPA.hpp" />
     <ClInclude Include="..\..\source\Sensitivities.h" />
+    <ClInclude Include="..\..\source\Sensitivities.hpp" />
     <ClInclude Include="..\..\source\Sensitivities_Database.h" />
+    <ClInclude Include="..\..\source\Sensitivities_Database.hpp" />
     <ClInclude Include="..\..\source\Utilities.h" />
+    <ClInclude Include="..\..\source\Utilities.hpp" />
   </ItemGroup>
-=======
-    <ClCompile>
-      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
-    </ClCompile>
-    <Link>
-      <AdditionalLibraryDirectories>C:\NumericalLibraries\boost_1_78_0\lib64-msvc-14.2</AdditionalLibraryDirectories>
-    </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <ClCompile>
-      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
-    </ClCompile>
-    <Link>
-      <AdditionalLibraryDirectories>C:\NumericalLibraries\boost_1_78_0\lib64-msvc-14.2</AdditionalLibraryDirectories>
-    </Link>
-  </ItemDefinitionGroup>
->>>>>>> main
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
