--- a/.gitignore
+++ b/.gitignore
@@ -34,14 +34,7 @@
 .DS_Store
 
 .idea/
-project/MSVS_2019/x64/
-project/MSVS_2019/.vs/
-project/MSVS_2019/pyPostProcessor.vcxproj.user
 
 # Ignore visual studio stuff
 
-project/MSVS_2019/x64/
-project/.vs/
-project/MSVS_2019/.vs/
-project/MSVS_2019/pyPostProcessor.vcxproj.user
-project/MSVS_2019/
+project/
