Update Linux Compilation Procedure

--- a/project/Linux/Makefile.am
+++ b/project/Linux/Makefile.am
@@ -1,16 +1,15 @@
 AUTOMAKE_OPTIONS = foreign
 
 if INTEL_COMPILER
-AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++11 @OPENMP_INTEL@
+AM_CXXFLAGS = -O3 -m64 -fPIC -shared -std=c++11 @OPENMP_INTEL@
 else
-AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++11 @OPENMP_GNU@
+AM_CXXFLAGS = -O3 -m64 -fPIC -shared -std=c++11 @OPENMP_GNU@
 endif
 
 AM_CPPFLAGS = 	@COMPULSORY_INCLUDE_DIRS@ 
 AM_LDFLAGS  =   
-
 #List of programs
-bin_PROGRAMS = 	pySMOKEPostProcessor.sh
+bin_PROGRAMS = 	pySMOKEPostProcessor.o
 
-pySMOKEPostProcessor_sh_SOURCES = ../../pySMOKEPostProcessor/source/main.cpp
-pySMOKEPostProcessor_sh_LDADD = @BOOST_LIBS@ -lgfortran 
+pySMOKEPostProcessor_o_SOURCES = ../../pySMOKEPostProcessor/source/main.cpp
+pySMOKEPostProcessor_o_LDADD = @BOOST_LIBS@ -lgfortran 
