--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ pySMOKEPostProcessor/source/.dirstamp
 Test/
 .ipynb_checkpoints/
 pySMOKEPostProcessor/GraphWriterrrr.py
+pySMOKEPostProcessor/source/stuff_test.txt
