--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Test/
 .ipynb_checkpoints/
 pySMOKEPostProcessor/GraphWriterrrr.py
 pySMOKEPostProcessor/source/stuff_test.txt
+examples/Sensitivity/Output-02/Sensitivities.OME2.xml
+examples/Sensitivity/Output-02/Sensitivities.temperature.xml
