--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ pySMOKEPostProcessor/GraphWriterrrr.py
 pySMOKEPostProcessor/source/stuff_test.txt
 examples/Sensitivity/Output-02/Sensitivities.OME2.xml
 examples/Sensitivity/Output-02/Sensitivities.temperature.xml
+examples/roba/
