--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ pySMOKEPostProcessor/source/stuff_test.txt
 examples/Sensitivity/Output-02/Sensitivities.OME2.xml
 examples/Sensitivity/Output-02/Sensitivities.temperature.xml
 examples/roba/
+project/MyMac/
