--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ examples/Sensitivity/Output-02/Sensitivities.OME2.xml
 examples/Sensitivity/Output-02/Sensitivities.temperature.xml
 examples/roba/
 project/MyMac/
+project/lib/
