--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,1 +1,8 @@
 add_subdirectory(pybind11)
+
+set(OPENSMOKE_INCLUDE
+    ${CMAKE_CURRENT_LIST_DIR}/opensmoke/source
+    CACHE
+    PATH
+    "Path to OpenSMOKE library"
+)
