--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ project/bin/
 __pycache__/
 Test/
 .ipynb_checkpoints/
+examples/notebooks/Debug.ipynb
 
 examples/Sensitivity/Output-02/Sensitivities.OME2.xml
 examples/Sensitivity/Output-02/Sensitivities.temperature.xml
