--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ pySMOKEPostProcessor.egg-info/
 pySMOKEPostProcessor_old
 examples-old
 
+examples/data/final/
+examples/data/old/
+
 compile_commands.json
 
 .DS_Store
